--- a/User_Vector_With_Tf_Idf.ipynb
+++ b/User_Vector_With_Tf_Idf.ipynb
@@ -997,8 +997,7 @@
    "source": [
     "for i in range(n_users):\n",
     "        idx, scores = get_items_rated_by_user(ratings_train, i)\n",
-    "        clf = Ridge(alpha=.1, copy_X=True, fit_intercept=True, max_iter=None,\n",
-    "      normalize=False, random_state=None, solver='auto', tol=0.001)\n",
+    "        clf = Ridge(alpha=1.0, random_state=241)\n",
     "        #idx = np.asarray(idx)\n",
     "        Xhat = D[idx,:]\n",
     "        \n",
@@ -1009,18 +1008,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        ,  0.09019689,  0.08306969, ..., -0.01716697,\n",
-       "         0.19261998,  0.17114731],\n",
+       "array([[ 0.        ,  0.03023679,  0.01808287, ..., -0.00677314,\n",
+       "         0.03899125,  0.02888918],\n",
        "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
-       "        -0.04934341,  0.52644005],\n",
-       "       [ 0.        ,  0.        ,  0.20942886, ..., -0.16861963,\n",
-       "         0.28593554,  0.49262477],\n",
+       "        -0.02827725,  0.20555655],\n",
+       "       [ 0.        ,  0.        ,  0.05487934, ..., -0.06578338,\n",
+       "         0.07093938,  0.19235286],\n",
        "       ...,\n",
        "       [ 0.        ,  0.        ,  0.        , ...,  0.        ,\n",
        "         0.        ,  0.        ],\n",
@@ -1030,7 +1029,7 @@
        "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1049,7 @@
        "(9025, 671)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1070,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,44 +1081,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1\n",
+    "n = 0\n",
     "ids, scores = get_items_rated_by_user(ratings_test, n)\n",
     "result = Yhat[ids, n]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ratings prediction of user  1  :\n",
-      "movie index :  328  -  predict ratings :  3.4794440959173984  -  true ratings :  3.0\n",
-      "movie index :  427  -  predict ratings :  3.415507515239639  -  true ratings :  4.0\n",
-      "movie index :  472  -  predict ratings :  3.4523731867196727  -  true ratings :  4.0\n",
-      "movie index :  129  -  predict ratings :  3.4168030869414494  -  true ratings :  5.0\n",
-      "movie index :  346  -  predict ratings :  3.49665950923465  -  true ratings :  3.0\n",
-      "movie index :  322  -  predict ratings :  3.1132406473233982  -  true ratings :  3.0\n",
-      "movie index :  37  -  predict ratings :  3.3406253856274404  -  true ratings :  5.0\n",
-      "movie index :  361  -  predict ratings :  3.297394428092352  -  true ratings :  3.0\n",
-      "movie index :  280  -  predict ratings :  3.426212961355537  -  true ratings :  4.0\n",
-      "movie index :  238  -  predict ratings :  3.4235586649700553  -  true ratings :  5.0\n",
-      "movie index :  198  -  predict ratings :  3.416974835514888  -  true ratings :  3.0\n",
-      "movie index :  432  -  predict ratings :  3.5397696834540695  -  true ratings :  3.0\n",
-      "movie index :  521  -  predict ratings :  3.4809862549327684  -  true ratings :  3.0\n",
-      "movie index :  132  -  predict ratings :  3.7127567951113254  -  true ratings :  4.0\n",
-      "movie index :  140  -  predict ratings :  3.4065237222120333  -  true ratings :  3.0\n",
-      "movie index :  321  -  predict ratings :  3.3958288025010805  -  true ratings :  3.0\n",
-      "movie index :  518  -  predict ratings :  3.4242153529032087  -  true ratings :  5.0\n",
-      "movie index :  335  -  predict ratings :  3.39710934008593  -  true ratings :  3.0\n",
-      "movie index :  406  -  predict ratings :  3.4033706857330976  -  true ratings :  3.0\n"
+      "ratings prediction of user  0  :\n",
+      "movie index :  30  -  predict ratings :  2.426854460256589  -  true ratings :  2.5\n",
+      "movie index :  1739  -  predict ratings :  2.423113389081579  -  true ratings :  2.0\n",
+      "movie index :  1661  -  predict ratings :  2.4192961861067674  -  true ratings :  4.0\n",
+      "movie index :  927  -  predict ratings :  2.4315037074263337  -  true ratings :  4.0\n",
+      "movie index :  903  -  predict ratings :  2.421217296468647  -  true ratings :  2.0\n"
      ]
     }
    ],
@@ -1131,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,15 +1143,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE for train case: 0.3476901636760064\n",
-      "RMSE for test case: 0.9538157144639453\n"
+      "RMSE for train case: 0.7666285240992233\n",
+      "RMSE for test case: 0.953144781499417\n"
      ]
     }
    ],
@@ -1177,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1316,7 @@
        "[19962 rows x 6 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1351,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('tf_idf_pred_rating.pckl', 'wb')\n",
+    "pickle.dump(predict_rating, f)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1375,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1413,7 @@
        "      <td>31</td>\n",
        "      <td>1260759144</td>\n",
        "      <td>30</td>\n",
-       "      <td>2.396332</td>\n",
+       "      <td>2.426854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1427,7 +1423,7 @@
        "      <td>2193</td>\n",
        "      <td>1260759198</td>\n",
        "      <td>1739</td>\n",
-       "      <td>2.380644</td>\n",
+       "      <td>2.423113</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1437,7 +1433,7 @@
        "      <td>2105</td>\n",
        "      <td>1260759139</td>\n",
        "      <td>1661</td>\n",
-       "      <td>2.354816</td>\n",
+       "      <td>2.419296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1447,7 +1443,7 @@
        "      <td>1172</td>\n",
        "      <td>1260759205</td>\n",
        "      <td>927</td>\n",
-       "      <td>2.422421</td>\n",
+       "      <td>2.431504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1457,7 +1453,7 @@
        "      <td>1129</td>\n",
        "      <td>1260759185</td>\n",
        "      <td>903</td>\n",
-       "      <td>2.376831</td>\n",
+       "      <td>2.421217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1477,7 +1473,7 @@
        "      <td>432</td>\n",
        "      <td>1063503739</td>\n",
        "      <td>381</td>\n",
-       "      <td>3.849600</td>\n",
+       "      <td>3.872884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19958</th>\n",
@@ -1487,7 +1483,7 @@
        "      <td>357</td>\n",
        "      <td>1063503998</td>\n",
        "      <td>322</td>\n",
-       "      <td>3.780819</td>\n",
+       "      <td>3.845205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19959</th>\n",
@@ -1497,7 +1493,7 @@
        "      <td>919</td>\n",
        "      <td>1065149458</td>\n",
        "      <td>737</td>\n",
-       "      <td>4.051248</td>\n",
+       "      <td>3.941357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19960</th>\n",
@@ -1507,7 +1503,7 @@
        "      <td>36</td>\n",
        "      <td>1065149314</td>\n",
        "      <td>34</td>\n",
-       "      <td>3.849357</td>\n",
+       "      <td>3.878385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19961</th>\n",
@@ -1517,7 +1513,7 @@
        "      <td>1223</td>\n",
        "      <td>1064891236</td>\n",
        "      <td>975</td>\n",
-       "      <td>3.938437</td>\n",
+       "      <td>3.902813</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1526,22 +1522,22 @@
       ],
       "text/plain": [
        "       userId       id  rating  movieId   timestamp  movieIndex  TF-IDF pred\n",
-       "0           0   9909.0     2.5       31  1260759144          30     2.396332\n",
-       "1           0    847.0     2.0     2193  1260759198        1739     2.380644\n",
-       "2           0     97.0     4.0     2105  1260759139        1661     2.354816\n",
-       "3           0  11216.0     4.0     1172  1260759205         927     2.422421\n",
-       "4           0   1103.0     2.0     1129  1260759185         903     2.376831\n",
+       "0           0   9909.0     2.5       31  1260759144          30     2.426854\n",
+       "1           0    847.0     2.0     2193  1260759198        1739     2.423113\n",
+       "2           0     97.0     4.0     2105  1260759139        1661     2.419296\n",
+       "3           0  11216.0     4.0     1172  1260759205         927     2.431504\n",
+       "4           0   1103.0     2.0     1129  1260759185         903     2.421217\n",
        "...       ...      ...     ...      ...         ...         ...          ...\n",
-       "19957     670  11310.0     2.5      432  1063503739         381     3.849600\n",
-       "19958     670    712.0     3.0      357  1063503998         322     3.780819\n",
-       "19959     670    630.0     4.0      919  1065149458         737     4.051248\n",
-       "19960     670    687.0     4.0       36  1065149314          34     3.849357\n",
-       "19961     670    530.0     3.0     1223  1064891236         975     3.938437\n",
+       "19957     670  11310.0     2.5      432  1063503739         381     3.872884\n",
+       "19958     670    712.0     3.0      357  1063503998         322     3.845205\n",
+       "19959     670    630.0     4.0      919  1065149458         737     3.941357\n",
+       "19960     670    687.0     4.0       36  1065149314          34     3.878385\n",
+       "19961     670    530.0     3.0     1223  1064891236         975     3.902813\n",
        "\n",
        "[19962 rows x 7 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,16 +1548,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.8496002838124688"
+       "3.8728841163963232"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
